Prevent vertical scrollbar on graph closes #42

--- a/app/assets/stylesheets/graphs.scss
+++ b/app/assets/stylesheets/graphs.scss
@@ -26,6 +26,7 @@
 
   .chart {
     position: relative;
+    height: 270px;
   }
   .y-axis {
     background: rgba(white, 0.8);
